[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Cell.gd" type="Script" id=1]
[ext_resource path="res://Assets/Animations/cell_clicked.tres" type="Animation" id=2]
[ext_resource path="res://Assets/Animations/cell_deselected.tres" type="Animation" id=3]
[ext_resource path="res://Assets/Animations/cell_selected.tres" type="Animation" id=4]
[ext_resource path="res://Scenes/Cell_Meshed.tscn" type="PackedScene" id=5]

[sub_resource type="BoxShape" id=1]

[node name="Cell" type="Spatial"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/cell_clicked = ExtResource( 2 )
anims/cell_deselected = ExtResource( 3 )
anims/cell_selected = ExtResource( 4 )

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 1 )

[node name="MeshInstance" parent="." instance=ExtResource( 5 )]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="input_event" from="StaticBody" to="." method="_on_StaticBody_input_event"]
[connection signal="mouse_entered" from="StaticBody" to="." method="_on_StaticBody_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody" to="." method="_on_StaticBody_mouse_exited"]
